Fix bugs, update responsive for low resolution Mobile screen

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -45,6 +45,7 @@
    }
 
    .search--mobile {
+      display: none;
       margin-top: 4px;
       font-size: 1.8rem;
       cursor: pointer;
